--- a/proj_cplex/proj_cplex.vcxproj
+++ b/proj_cplex/proj_cplex.vcxproj
@@ -30,9 +30,114 @@
     <ClInclude Include="Tipo_Viga.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\x64\Debug\hbp1_15_1" />
+    <None Include="..\x64\Debug\hbp1_15_1.pat" />
+    <None Include="..\x64\Debug\hbp1_15_1.solu" />
+    <None Include="..\x64\Debug\hbp1_15_2" />
+    <None Include="..\x64\Debug\hbp1_15_2.pat" />
+    <None Include="..\x64\Debug\hbp1_15_2.solu" />
+    <None Include="..\x64\Debug\hbp1_15_3" />
+    <None Include="..\x64\Debug\hbp1_15_3.pat" />
+    <None Include="..\x64\Debug\hbp1_15_3.solu" />
+    <None Include="..\x64\Debug\hbp1_15_4" />
+    <None Include="..\x64\Debug\hbp1_15_4.pat" />
+    <None Include="..\x64\Debug\hbp1_15_4.solu" />
+    <None Include="..\x64\Debug\hbp1_15_5" />
+    <None Include="..\x64\Debug\hbp1_15_5.pat" />
+    <None Include="..\x64\Debug\hbp1_15_5.solu" />
+    <None Include="..\x64\Debug\hbp1_30_1" />
+    <None Include="..\x64\Debug\hbp1_30_1.pat" />
+    <None Include="..\x64\Debug\hbp1_30_1.solu" />
+    <None Include="..\x64\Debug\hbp1_30_2" />
+    <None Include="..\x64\Debug\hbp1_30_2.pat" />
+    <None Include="..\x64\Debug\hbp1_30_2.solu" />
+    <None Include="..\x64\Debug\hbp1_30_3" />
+    <None Include="..\x64\Debug\hbp1_30_3.pat" />
+    <None Include="..\x64\Debug\hbp1_30_3.solu" />
+    <None Include="..\x64\Debug\hbp1_30_4" />
+    <None Include="..\x64\Debug\hbp1_30_4.pat" />
+    <None Include="..\x64\Debug\hbp1_30_4.solu" />
+    <None Include="..\x64\Debug\hbp1_30_5" />
+    <None Include="..\x64\Debug\hbp1_30_5.pat" />
+    <None Include="..\x64\Debug\hbp1_30_5.solu" />
+    <None Include="..\x64\Debug\hbp2_15_1" />
+    <None Include="..\x64\Debug\hbp2_15_1.pat" />
+    <None Include="..\x64\Debug\hbp2_15_1.solu" />
+    <None Include="..\x64\Debug\hbp2_15_2" />
+    <None Include="..\x64\Debug\hbp2_15_2.pat" />
+    <None Include="..\x64\Debug\hbp2_15_2.solu" />
+    <None Include="..\x64\Debug\hbp2_15_3" />
+    <None Include="..\x64\Debug\hbp2_15_3.pat" />
+    <None Include="..\x64\Debug\hbp2_15_3.solu" />
+    <None Include="..\x64\Debug\hbp2_15_4" />
+    <None Include="..\x64\Debug\hbp2_15_4.pat" />
+    <None Include="..\x64\Debug\hbp2_15_4.solu" />
+    <None Include="..\x64\Debug\hbp2_15_5" />
+    <None Include="..\x64\Debug\hbp2_15_5.pat" />
+    <None Include="..\x64\Debug\hbp2_15_5.solu" />
+    <None Include="..\x64\Debug\hbp2_30_1" />
+    <None Include="..\x64\Debug\hbp2_30_1.pat" />
+    <None Include="..\x64\Debug\hbp2_30_1.solu" />
+    <None Include="..\x64\Debug\hbp2_30_2" />
+    <None Include="..\x64\Debug\hbp2_30_2.pat" />
+    <None Include="..\x64\Debug\hbp2_30_2.solu" />
+    <None Include="..\x64\Debug\hbp2_30_3" />
+    <None Include="..\x64\Debug\hbp2_30_3.pat" />
+    <None Include="..\x64\Debug\hbp2_30_3.solu" />
+    <None Include="..\x64\Debug\hbp2_30_4" />
+    <None Include="..\x64\Debug\hbp2_30_4.pat" />
+    <None Include="..\x64\Debug\hbp2_30_4.solu" />
+    <None Include="..\x64\Debug\hbp2_30_5" />
+    <None Include="..\x64\Debug\hbp2_30_5.pat" />
+    <None Include="..\x64\Debug\hbp2_30_5.solu" />
+    <None Include="..\x64\Debug\hbp3_15_1" />
+    <None Include="..\x64\Debug\hbp3_15_1.pat" />
+    <None Include="..\x64\Debug\hbp3_15_1.solu" />
+    <None Include="..\x64\Debug\hbp3_15_2" />
+    <None Include="..\x64\Debug\hbp3_15_2.pat" />
+    <None Include="..\x64\Debug\hbp3_15_2.solu" />
+    <None Include="..\x64\Debug\hbp3_15_3" />
+    <None Include="..\x64\Debug\hbp3_15_3.pat" />
+    <None Include="..\x64\Debug\hbp3_15_3.solu" />
+    <None Include="..\x64\Debug\hbp3_15_4" />
+    <None Include="..\x64\Debug\hbp3_15_4.pat" />
+    <None Include="..\x64\Debug\hbp3_15_5" />
+    <None Include="..\x64\Debug\hbp3_15_5.pat" />
+    <None Include="..\x64\Debug\hbp3_30_1" />
+    <None Include="..\x64\Debug\hbp3_30_1.pat" />
+    <None Include="..\x64\Debug\hbp3_30_2" />
+    <None Include="..\x64\Debug\hbp3_30_2.pat" />
+    <None Include="..\x64\Debug\hbp3_30_3" />
+    <None Include="..\x64\Debug\hbp3_30_3.pat" />
+    <None Include="..\x64\Debug\hbp3_30_4" />
+    <None Include="..\x64\Debug\hbp3_30_4.pat" />
+    <None Include="..\x64\Debug\hbp3_30_5" />
+    <None Include="..\x64\Debug\hbp3_30_5.pat" />
+    <None Include="..\x64\Debug\hbp4_15_1" />
+    <None Include="..\x64\Debug\hbp4_15_1.pat" />
+    <None Include="..\x64\Debug\hbp4_15_2" />
+    <None Include="..\x64\Debug\hbp4_15_2.pat" />
+    <None Include="..\x64\Debug\hbp4_15_3" />
+    <None Include="..\x64\Debug\hbp4_15_3.pat" />
+    <None Include="..\x64\Debug\hbp4_15_4" />
+    <None Include="..\x64\Debug\hbp4_15_4.pat" />
+    <None Include="..\x64\Debug\hbp4_15_5" />
+    <None Include="..\x64\Debug\hbp4_15_5.pat" />
+    <None Include="..\x64\Debug\hbp4_30_1" />
+    <None Include="..\x64\Debug\hbp4_30_1.pat" />
+    <None Include="..\x64\Debug\hbp4_30_2" />
+    <None Include="..\x64\Debug\hbp4_30_2.pat" />
+    <None Include="..\x64\Debug\hbp4_30_3" />
+    <None Include="..\x64\Debug\hbp4_30_3.pat" />
+    <None Include="..\x64\Debug\hbp4_30_4" />
+    <None Include="..\x64\Debug\hbp4_30_4.pat" />
+    <None Include="..\x64\Debug\hbp4_30_5" />
+    <None Include="..\x64\Debug\hbp4_30_5.pat" />
+    <None Include="..\x64\Debug\testes.bat" />
     <None Include="hbp1_15_1" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="..\x64\Debug\resultados.txt" />
     <Text Include="resultados.txt" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
